   (<https://bugs.gnu.org/75085>)
** 'all-threads' no longer includes the finalizer thread
   (<https://bugs.gnu.org/76343>)
   Previously 'all-threads' would include the finalizer thread.  This,
   in turn, would trigger warnings from 'primitive-fork' and 'environ'
   suggesting they are being called in a multi-threaded context, when in
   fact user code did not create any thread.


Changes in 3.0.10 (since 3.0.9)

* Notable changes

** Beginnings of support for alternate back-ends

A number of adaptations and additions of as-yet unstable interfaces have
been made to allow third-party projects such as the Hoot
Guile-to-WebAssembly whole-program compiler
(https://spritely.institute/hoot/) to use the Guile front-end and
optimizer.  Depending on how Hoot development goes, we may consider
adding first-class support for WebAssembly as a compilation target;
discussion is welcome on the guile-devel mailing list.

** `define` in all bodies

`define` adds a definition to the body in which it appears, as if each
non-tail definition or expression in that body were a binding in a
surrounding `letrec*` clause.  However, in some places, using `define`
would result in the annoying error "definition in expression context,
where definitions are not allowed", which could be fixed by explicitly
adding a surrounding binding contour, for example an empty `let`.  This
was because there was no implicit surrounding lexical binding contour
for the body of `when` and `unless`, for `cond` clauses, `case` clauses,
`and-let*` bodies, and `with-fluids`.  But no more; now these contexts
now create a binding contour, allowing the use of `define`.

** Two bug fixes of note regarding scoping of top-level variables

Previously, a reference to a top-level variable in a module other than
the current module would be silently rewritten to reference the current
module, if the variable was unbound in its original module.  This was a
hack from the early days of when we extended psyntax to know about the