@@ -1705,6 +1705,19 @@ SCM_DEFINE (scm_uname, "uname", 0, 0, 0,
 #undef FUNC_NAME
 #endif /* HAVE_UNAME */
 
+static void
+maybe_warn_about_environ_mutation (void)
+{
+  /* Mutating `environ' directly in a multi-threaded program is
+     undefined behavior.  */
+  if (scm_ilength (scm_all_threads ()) != 1)
+    scm_display
+      (scm_from_latin1_string
+       ("warning: mutating the process environment while multiple threads are running;\n"
+        "         further behavior unspecified.\n"),
+       scm_current_warning_port ());
+}
+
 SCM_DEFINE (scm_environ, "environ", 0, 1, 0, 
             (SCM env),
 	    "If @var{env} is omitted, return the current environment (in the\n"
@@ -1716,22 +1729,13 @@ SCM_DEFINE (scm_environ, "environ", 0, 1, 0,
 	    "then the return value is unspecified.")
 #define FUNC_NAME s_scm_environ
 {
-  /* Accessing `environ' directly in a multi-threaded program is
-     undefined behavior since at anytime it could point to anything else
-     while reading it.  Not only that, but all accesses are protected by
-     an internal mutex of libc.  Thus, it is only truly safe to modify
-     the environment directly in a single-threaded program.  */
-  if (scm_ilength (scm_all_threads ()) != 1)
-    scm_display
-      (scm_from_latin1_string
-       ("warning: call to environ while multiple threads are running;\n"
-        "         further behavior unspecified.\n"),
-       scm_current_warning_port ());
-
   if (SCM_UNBNDP (env))
     return scm_makfromstrs (-1, environ);
   else
     {
+      /* Mutating the environment in a multi-threaded program is hazardous. */
+      maybe_warn_about_environ_mutation ();
+
       /* Arrange to not use GC-allocated storage for what goes into
          'environ' as libc might reallocate it behind our back.  */
 #if HAVE_CLEARENV
@@ -1950,6 +1954,9 @@ SCM_DEFINE (scm_putenv, "putenv", 1, 0, 0,
 {
   int rv;
   char *c_str = scm_to_locale_string (str);
+
+  /* Mutating the environment in a multi-threaded program is hazardous. */
+  maybe_warn_about_environ_mutation ();
 
   /* Leave C_STR in the environment.  */
 
